* October 17th, 2018
** Added a basic agenda view - try tapping the new calendar button at the bottom of the screen!
* October 4th, 2018
** Implemented new (kinda slicker?) modal component
* October 2nd, 2018
** Added buttons to add/edit deadline and scheduled timestamps
* September 23rd, 2018
** Added native support for displaying and editing timestamps
* September 18th, 2018 (afternoon)
** Parse and display inline markup like ~this~ and +this+ and *this* and /this/
* September 18th, 2018
** Added URL params for capture, specifically for Siri Shortcuts support!
*** Check out [[https://www.icloud.com/shortcuts/4e51e8b748d14a50aa70ac6fb963f775][this sample Siri Shortcut]] or [[https://github.com/DanielDe/org-web/#capture-params-and-siri-support][the README file]] for more information
* September 13th, 2018
** Added support for Google Drive!
*** You can now use Google Drive as a sync backend. Just choose it as an option when you click "Sign in".
*** Please let me know if you run into any issues with Google Drive by [[https://github.com/DanielDe/org-web/issues/new][creating an issue]]!
* September 5th, 2018
** Native tag support and editor
*** A new button in the header action drawer brings up the tag editor
*** From here you can modify, add, and reorder tags
* September 3rd, 2018
** Huge UI overhaul!
*** Removed the action drawer, replaced with just three buttons: Sync, Movement, and Capture Templates
*** All other actions now available via header action drawer, table action drawer, or swipe actions
*** See the Help/Sample file in Settings for more details!
* September 2nd, 2018
** Replaced "push" and "pull" buttons with a single "sync" button
* August 31st, 2018
** Added mini action drawer to selected headers for easier access to edit and focus buttons
* August 30th, 2018
** Moved undo button into the header
*** This is one step in a major UI overhaul
** Moved links to Github and Changelog into the settings page
* August 29th, 2018